--- a/index.html
+++ b/index.html
@@ -1,45 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-        .board {
-            border-collapse: collapse;
-        }
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <table class="board"></table>
+      <div class="controls">
+        <button class="start-game">Start</button>
+        <button class="pause-game">Pause</button>
+        <h1>Score <span class="score">0</span></h1>
+      </div>
+    </div>
 
-        tr {
-            background-color: #8A46F0;
-        }
-
-        td {
-            width: 50px;
-            height: 50px;
-            text-align: center;
-            border: 5px solid #402170;
-        }
-
-        .snake {
-            background-color: #9A00BD !important;
-        }
-        
-        .snake-tail {
-            background-color: #ff7b00 !important;
-        }
-
-        .food {
-            background-color: #B78FF2;
-        }
-    </style>
-</head>
-<body>
-    <table class="board"></table>
-    <button class="start-game">Start</button>
-    <button class="pause-game">Pause</button>
-    <h1>Score <span class="score">0</span></h1>
-    
     <script src="snake-game.js"></script>
-</body>
+  </body>
 </html>
