Create record system

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <div class="controls">
         <button class="start-game">Start</button>
         <button class="pause-game">Pause</button>
-        <h1>Score <span class="score">0</span></h1>
+        <h1>Score: <span class="score">0</span></h1>
+        <h1>Record: <span class="record">0</span></h1>
       </div>
     </div>
 
